- small change to the footer text

--- a/DeliveryCompany/DeliveryCompany/Views/Shared/_Layout.cshtml
+++ b/DeliveryCompany/DeliveryCompany/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
 
     <footer class="border-top footer bg-dark text-muted">
         <div class="container align-content-center text-center text-light">
-            &copy; 2024 - DeliveryCompany - <a asp-area="" class="text-info" asp-controller="Home" asp-action="Index">Home</a>. Faster than you can spell =))
+            &copy; 2024 - DeliveryCompany - SMA<a asp-area="" class="text-info" asp-controller="Home" asp-action="Index">Home</a>. Faster than you can spell =))
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
