--- a/DeliveryCompany/DeliveryCompany/Views/Shared/_Layout.cshtml
+++ b/DeliveryCompany/DeliveryCompany/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/DeliveryCompany.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <header>
@@ -39,7 +41,7 @@
 
     <footer class="border-top footer bg-dark text-muted">
         <div class="container align-content-center text-center text-light">
-            &copy; 2024 - DeliveryCompany - <a asp-area="" class="text-info" asp-controller="Home" asp-action="Index">Home</a>. Faster than you can spell =))
+            &copy; 2024 - DeliveryCompany - SMA<a asp-area="" class="text-info" asp-controller="Home" asp-action="Index">Home</a>. Faster than you can spell =))
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
