--- a/DeliveryCompany/DeliveryCompany/Views/Orders/Index.cshtml
+++ b/DeliveryCompany/DeliveryCompany/Views/Orders/Index.cshtml
@@ -16,7 +16,7 @@
 			</div>
 		</div>
 		<div class="col-6 text-end">
-			<button type="button" class="btn btn-dark form-control" data-bs-toggle="modal">
+			<button type="button" class="btn btn-dark form-control" data-bs-toggle="modal" data-bs-target="#confirmationModal">
 				Create
 			</button>
 		</div>
@@ -80,7 +80,7 @@
 							<div class="w-75" role="group">
 								@if (obj.Status == DeliveryCompany.Utility.Enums.OrderStatus.Unassigned)
 								{
-									<a href="#" class="btn btn-danger mx-1 delete-btn">
+									<a href="#" class="btn btn-danger mx-1 delete-btn" data-id="@obj.Id">
 										<i class="bi bi-trash-fill">Cancel Order</i>
 									</a>
 								}
@@ -102,9 +102,48 @@
 	{
 		<p>No Data to display!</p>
 	}
+	@await Html.PartialAsync("_OrdersModal", new OrderVM())
+</div>
+<div class="modal fade" id="confirmationModalPopup" tabindex="-1" aria-labelledby="confirmationModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-dialog-centered">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="confirmationModalLabel">Confirm Action</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				Are you sure you want to delete this order?
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+				<button type="button" class="btn btn-danger" id="confirmDelete">Delete</button>
+			</div>
+		</div>
+	</div>
 </div>
 @section Scripts {
 	@{
 		<partial name="_ValidationScriptsPartial" />
 	}
+	<script>
+		$(document).ready(function () {
+			$('.delete-btn').click(function () {
+				var orderId = $(this).data('id');
+				$('#confirmationModalPopup').modal('show');
+
+				$('#confirmDelete').click(function () {
+					$.ajax({
+						url: '@Url.Action("Delete", "Orders")',
+						type: 'POST',
+						data: { id: orderId },
+						success: function () {
+							location.reload();
+						},
+						error: function () {
+						}
+					});
+				});
+			});
+		});
+	</script>
 }
