--- a/DeliveryCompany/DeliveryCompany/Views/Orders/Index.cshtml
+++ b/DeliveryCompany/DeliveryCompany/Views/Orders/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@using Models.ViewModels;
+@using Services.IServices
 @{
 	ViewData["Title"] = "Orders Page";
 }
 @model List<OrderVM>
+@inject IOrdersService _ordersService;
 <div class="container">
 	<div class="row pt-4 pb-3">
 		<div class="col-6">
@@ -102,7 +104,7 @@
 	{
 		<p>No Data to display!</p>
 	}
-	@await Html.PartialAsync("_OrdersModal", new OrderVM())
+	@await Html.PartialAsync("_OrdersModal", await _ordersService.GetCitiesWithOrderViewModel())
 </div>
 <div class="modal fade" id="confirmationModalPopup" tabindex="-1" aria-labelledby="confirmationModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-dialog-centered">
