--- a/DeliveryCompany/DeliveryCompany/Views/UserManagement/Index.cshtml
+++ b/DeliveryCompany/DeliveryCompany/Views/UserManagement/Index.cshtml
@@ -1,6 +1,14 @@
 ﻿@using Models.ViewModels
 @model UserRoleVM
+
+@{
+    ViewData["Title"] = "User Management";
+}
 <div class="container">
+    <div id="loading-indicator" style="display:none">
+        @await Html.PartialAsync("_Loading");
+    </div>
+    Are you sure you
     <div class="row pt-4 pb-3">
         <div class="col-6">
             <div class="row">
@@ -28,6 +36,10 @@
                             <p><b>Email:</b> @user.Email</p>
                             <p><b>Role:</b> @user.Role</p>
                             <p><b>Address:</b> @user.Address</p>
+                            <div class="d-flex justify-content-between">
+                                <i class="bi bi-trash text-danger delete-icon" data-id="@user.UserId" style="cursor: pointer;"></i>
+                                <a asp-controller="UserManagement" asp-action="Edit" asp-route-id="@user.UserId" class="text-primary" style="cursor: pointer;"><i class="bi bi-pencil"></i></a>
+                            </div>
                             <hr> 
                         </div>
                     }
@@ -46,6 +58,10 @@
                             <p><b>Email:</b> @user.Email</p>
                             <p><b>Role:</b> @user.Role</p>
                             <p><b>Address:</b> @user.Address</p>
+                            <div class="d-flex justify-content-between">
+                                <i class="bi bi-trash text-danger delete-icon" data-id="@user.UserId" style="cursor: pointer;"></i>
+                                <a asp-controller="UserManagement" asp-action="Edit" asp-route-id="@user.UserId" class="text-primary" style="cursor: pointer;"><i class="bi bi-pencil"></i></a>
+                            </div>
                             <hr> 
                         </div>
                     }
@@ -64,6 +80,10 @@
                             <p><b>Email:</b> @user.Email</p>
                             <p><b>Role:</b> @user.Role</p>
                             <p><b>Address:</b> @user.Address</p>
+                            <div class="d-flex justify-content-between">
+                                <i class="bi bi-trash text-danger delete-icon" data-id="@user.UserId" style="cursor: pointer;"></i>
+                                <a asp-controller="UserManagement" asp-action="Edit" asp-route-id="@user.UserId" class="text-primary" style="cursor: pointer;"><i class="bi bi-pencil"></i></a>
+                            </div>
                             <hr> 
                         </div>
                     }
@@ -73,7 +93,58 @@
     </div>
 </div>
 
+<div class="modal fade" id="confirmationModalPopup" tabindex="-1" aria-labelledby="confirmationModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmationModalLabel">Confirm Action</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this user?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" id="confirmDelete">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 @section Scripts
 {
-    <partial name="_ValidationScriptsPartial" />
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+    <script>
+        $(document).ready(function () {
+            function showLoadingIndicator() {
+                $('#loading-indicator').show();
+            }
+
+            function hideLoadingIndicator() {
+                $('#loading-indicator').hide();
+            }
+
+            $('.delete-icon').click(function () {
+                var userId = $(this).data('id');
+                console.log(userId);
+                $('#confirmationModalPopup').modal('show');
+                $('#confirmDelete').off('click').on('click', function () {
+                    showLoadingIndicator();
+                    $('#confirmationModalPopup').modal('hide');
+                    $.ajax({
+                        url: '@Url.Action("Delete", "UserManagement")',
+                        type: 'POST',
+                        data: { id: userId },
+                        success: function () {
+                            location.reload();
+                        },
+                        error: function () {
+                        }
+                    });
+                });
+            });
+        });
+    </script>
 }
