--- a/DeliveryCompany/DeliveryCompany/Views/Shared/_Layout.cshtml
+++ b/DeliveryCompany/DeliveryCompany/Views/Shared/_Layout.cshtml
@@ -40,6 +40,10 @@
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="UserManagement" asp-action="Index">User Management</a>
                             </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="DeliveryCars" asp-action="Index">Delivery Cars</a>
+                            </li>
                         }
                         </ul>
                     <partial name="_LoginPartial" />
