--- a/DeliveryCompany/DeliveryCompany/Views/DeliveryCars/Index.cshtml
+++ b/DeliveryCompany/DeliveryCompany/Views/DeliveryCars/Index.cshtml
@@ -1,136 +1,187 @@
 ﻿@using DeliveryCompany.Models.ViewModels
-@model DeliveryCarsVM;
+@model DeliveryCarsVM
 @{
     ViewData["Title"] = "Delivery Cars Management";
 }
 <div class="container">
-	<div class="row pt-4 pb-3">
-		<div class="col-6">
-			<div class="row">
-				<h2 class="text-primary">
-					Delivery Cars List
-				</h2>
-				<p>
-					Size is displayed in cm
-				</p>
-			</div>
-		</div>
-	</div>
-	@if (Model.Cars.Count != 0)
-	{
-		<table class="table table-bordered table-striped">
-			<thead>
-				<tr>
-					<th>
-						MaxWeight
-					</th>
-					<th>
-						MaxWidth
-					</th>
-					<th>
-						MaxHeight
-					</th>
-					<th>
-						MaxLength
-					</th>
-					<th>
-						AssigmentStatus
-					</th>
-					<th>
-						EmployeeId
-					</th>
-					<th>
-						CityId
-					</th>
-					<th></th>
-				</tr>
-			</thead>
-			<tbody>
-				@foreach (var obj in Model.Cars)
-				{
-					<tr class="clickable">
-						<td>
-							@obj.MaxWeight 
-						</td>
-						<td>
-							@obj.MaxWidth 
-						</td>
-						<td>
-							@obj.MaxHeight
-						</td>
-						<td>
-							@obj.MaxLength
-						</td>
-						<td>
-							@obj.AssigmentStatus.ToString()
-						</td>
-						<td>
-							@obj.EmployeeId
-						</td>
-						<td>
-							@obj.CityId
-						</td>
-						<td>
-							<div class="w-75" role="group">
-									<a href="#" class="btn btn-danger mx-1 delete-btn" data-id="@obj.DeliveryCarsId">
-										<i class="bi bi-trash-fill">Cancel Order</i>
-									</a>
-							</div>
-						</td>
-					</tr>
-				}
-			</tbody>
+    <div id="loading-indicator" style="display:none">
+        @await Html.PartialAsync("_Loading");
+    </div>
+    <div class="row pt-4 pb-3">
+        <div class="col-6">
+            <div class="row">
+                <h2 class="text-primary">
+                    Delivery Cars List
+                </h2>
+                <p>
+                    Size is displayed in cm
+                </p>
+            </div>
+        </div>
+        <div class="col-6 text-end">
+            <button class="btn btn-dark" id="addDeliveryCar">
+                <i class="bi bi-plus-circle"></i> Add Delivery Car
+            </button>
+        </div>
+    </div>
+    @if (Model.Cars.Count != 0)
+    {
+        <table class="table table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th>
+                        MaxWeight
+                    </th>
+                    <th>
+                        MaxWidth
+                    </th>
+                    <th>
+                        MaxHeight
+                    </th>
+                    <th>
+                        MaxLength
+                    </th>
+                    <th>
+                        AssigmentStatus
+                    </th>
+                    <th>
+                        EmployeeId
+                    </th>
+                    <th>
+                        CityId
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var obj in Model.Cars)
+                {
+                    <tr class="clickable">
+                        <td>
+                            @obj.MaxWeight
+                        </td>
+                        <td>
+                            @obj.MaxWidth
+                        </td>
+                        <td>
+                            @obj.MaxHeight
+                        </td>
+                        <td>
+                            @obj.MaxLength
+                        </td>
+                        <td>
+                            @obj.AssigmentStatus.ToString()
+                        </td>
+                        <td>
+                            @obj.EmployeeId
+                        </td>
+                        <td>
+                            @obj.CityId
+                        </td>
+                        <td>
+                            <div class="w-75 btn-group" role="group">
+                                <a href="#" class="btn btn-danger mx-1 delete-btn btn-block" data-id="@obj.DeliveryCarsId">
+                                    <i class="bi bi-trash-fill"></i>Delete
+                                </a>
+                                <a asp-controller="DeliveryCars" asp-action="Edit" asp-route-id="@obj.DeliveryCarsId" class="btn btn-dark mx-1 btn-block ">
+                                    <i class="bi bi-pencil-square"></i>Edit
+                                </a>
+                            </div>
+                        </td>
+                    </tr>
+                }
+            </tbody>
 
-		</table>
-	}
-	else
-	{
-		<p>No Data to display!</p>
-	}
+        </table>
+    }
+    else
+    {
+        <p>No Data to display!</p>
+    }
 </div>
 <div class="modal fade" id="confirmationModalPopup" tabindex="-1" aria-labelledby="confirmationModalLabel" aria-hidden="true">
-	<div class="modal-dialog modal-dialog-centered">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="confirmationModalLabel">Confirm Action</h5>
-				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-			</div>
-			<div class="modal-body">
-				Are you sure you want to delete this Delivery Car?
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-				<button type="button" class="btn btn-danger" id="confirmDelete">Delete</button>
-			</div>
-		</div>
-	</div>
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmationModalLabel">Confirm Action</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this Delivery Car?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" id="confirmDelete">Delete</button>
+            </div>
+        </div>
+    </div>
 </div>
 
-
+<div class="modal fade" id="selectCityModal" tabindex="-1" aria-labelledby="selectCityModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="selectCityModalLabel">Select City</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <select id="cityDropdown" class="form-control">
+                    <option value="">Select City</option>
+                    @foreach (var city in Model.Cities)
+                    {
+                        <option value="@city.CityId">@city.Name</option>
+                    }
+                </select>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="confirmCitySelection">Confirm</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 @section Scripts {
-	@{
-		<partial name="_ValidationScriptsPartial" />
-	}
-	<script>
-		$(document).ready(function () {
-			$('.delete-btn').click(function () {
-				var deliveryCarId = $(this).data('id');
-				$('#confirmationModalPopup').modal('show');
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+    <script>
+        $(document).ready(function () {
+            $('.delete-btn').click(function () {
+                var deliveryCarId = $(this).data('id');
+                $('#confirmationModalPopup').modal('show');
 
-				$('#confirmDelete').click(function () {
-					$.ajax({
-						url: '@Url.Action("Delete", "DeliveryCars")',
-						type: 'POST',
-						data: { id: deliveryCarId },
-						success: function () {
-							location.reload();
-						},
-						error: function () {
-						}
-					});
-				});
-			});
-		});
-	</script>
+                $('#confirmDelete').click(function () {
+                    $.ajax({
+                        url: '@Url.Action("Delete", "DeliveryCars")',
+                        type: 'POST',
+                        data: { id: deliveryCarId },
+                        success: function () {
+                            location.reload();
+                        },
+                        error: function () {
+                        }
+                    });
+                });
+            });
+        });
+    </script>
+
+    <script>
+        $(document).ready(function () {
+            $('#addDeliveryCar').click(function () {
+                $('#selectCityModal').modal('show');
+                $('#confirmCitySelection').click(function () {
+                    var selectedCityId = $('#cityDropdown').val();
+                    if (selectedCityId) {
+                        var url = '@Url.Action("Create", "DeliveryCars")';
+                        var finalUrl = url + '?cityId=' + selectedCityId;
+                        window.location.href = finalUrl;
+                    } else {
+                        alert('Please select a city.');
+                    }
+                });
+            });
+        });
+    </script>
 }
