--- a/DeliveryCompany/DeliveryCompany/Views/UserManagement/Edit.cshtml
+++ b/DeliveryCompany/DeliveryCompany/Views/UserManagement/Edit.cshtml
@@ -10,6 +10,7 @@
         <h2 class="text-center text-primary">Edit User</h2>
         <form asp-action="Edit" method="post">
             <div asp-validation-summary="ModelOnly"></div>
+            <input type="hidden" name="OldEmail" value="@Model.OldEmail" />
             <div class="mb-1">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
