--- a/DeliveryCompany/DeliveryCompany/Views/Orders/Index.cshtml
+++ b/DeliveryCompany/DeliveryCompany/Views/Orders/Index.cshtml
@@ -1,151 +1,162 @@
-﻿@using Models.ViewModels;
+﻿@using Constants.Authentification
+@using Models.ViewModels;
 @using Services.IServices
 @{
-	ViewData["Title"] = "Orders Page";
+    ViewData["Title"] = "Orders Page";
 }
 @model List<OrderVM>
 @inject IOrdersService _ordersService;
 <div class="container">
-	<div class="row pt-4 pb-3">
-		<div class="col-6">
-			<div class="row">
-				<h2 class="text-primary">
-					Category List
-				</h2>
-				<p>
-					Size:Height x Width x Length (cm)
-				</p>
-			</div>
-		</div>
-		<div class="col-6 text-end">
-			<button type="button" class="btn btn-dark form-control" data-bs-toggle="modal" data-bs-target="#confirmationModal">
-				Create
-			</button>
-		</div>
-	</div>
-	@if (Model.Count != 0)
-	{
-		<table class="table table-bordered table-striped">
-			<thead>
-				<tr>
-					<th>
-						Price
-					</th>
-					<th>
-						Name
-					</th>
-					<th>
-						Description
-					</th>
-					<th>
-						Weight
-					</th>
-					<th>
-						Size
-					</th>
-					<th>
-						DateTime
-					</th>
-					<th>
-						Status
-					</th>
-					<th></th>
-				</tr>
-			</thead>
-			<tbody>
-				@foreach (var obj in Model.OrderBy(
-						category => category.DateTime))
-				{
-					<tr class="clickable">
-						<td>
-							@obj.Price.ToString("F2") RON
-						</td>
-						<td>
-							@obj.Name
-						</td>
-						<td>
-							@obj.Description
-						</td>
-						<td>
-							@obj.Weight Kg
-						</td>
-						<td>
-							@obj.Height x @obj.Width x @obj.Length (cm)
-						</td>
-						<td>
-							@obj.DateTime
-						</td>
-						<td>
-							@obj.Status
-						</td>
-						<td>
-							<div class="w-75" role="group">
-								@if (obj.Status == DeliveryCompany.Utility.Enums.OrderStatus.Unassigned)
-								{
-									<a href="#" class="btn btn-danger mx-1 delete-btn" data-id="@obj.Id">
-										<i class="bi bi-trash-fill">Cancel Order</i>
-									</a>
-								}
-								else
-								{
-									<button type="button" class="btn btn-danger mx-3 disabled" disabled>
-										<i class="bi bi-trash-fill"></i> Cancel Order
-									</button>
-								}
-							</div>
-						</td>
-					</tr>
-				}
-			</tbody>
+    <div class="row pt-4 pb-3">
+        <div class="col-6">
+            <div class="row">
+                <h2 class="text-primary">
+                    Category List
+                    @if (User.IsInRole(UserRoles.Admin))
+                    {
+                        <h2 class="text-warning">
+                            (Admin)
+                        </h2>
 
-		</table>
-	}
-	else
-	{
-		<p>No Data to display!</p>
-	}
-	@await Html.PartialAsync("_OrdersModal", await _ordersService.GetCitiesWithOrderViewModel())
+                    }
+                </h2>
+                <p>
+                    Size:Height x Width x Length (cm)
+                </p>
+            </div>
+        </div>
+        <div class="col-6 text-end">
+            @if (!User.IsInRole(UserRoles.Admin))
+            {
+                <button type="button" class="btn btn-dark form-control" data-bs-toggle="modal" data-bs-target="#confirmationModal">
+                    Create
+                </button>
+            }
+        </div>
+    </div>
+    @if (Model.Count != 0)
+    {
+        <table class="table table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th>
+                        Price
+                    </th>
+                    <th>
+                        Name
+                    </th>
+                    <th>
+                        Description
+                    </th>
+                    <th>
+                        Weight
+                    </th>
+                    <th>
+                        Size
+                    </th>
+                    <th>
+                        DateTime
+                    </th>
+                    <th>
+                        Status
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var obj in Model.OrderBy(
+               category => category.DateTime))
+                {
+                    <tr class="clickable">
+                        <td>
+                            @obj.Price.ToString("F2") RON
+                        </td>
+                        <td>
+                            @obj.Name
+                        </td>
+                        <td>
+                            @obj.Description
+                        </td>
+                        <td>
+                            @obj.Weight Kg
+                        </td>
+                        <td>
+                            @obj.Height x @obj.Width x @obj.Length (cm)
+                        </td>
+                        <td>
+                            @obj.DateTime
+                        </td>
+                        <td>
+                            @obj.Status
+                        </td>
+                        <td>
+                            <div class="w-75" role="group">
+                                @if (obj.Status == DeliveryCompany.Utility.Enums.OrderStatus.Unassigned)
+                                {
+                                    <a href="#" class="btn btn-danger mx-1 delete-btn" data-id="@obj.Id">
+                                        <i class="bi bi-trash-fill">Cancel Order</i>
+                                    </a>
+                                }
+                                else
+                                {
+                                    <button type="button" class="btn btn-danger mx-3 disabled" disabled>
+                                        <i class="bi bi-trash-fill"></i> Cancel Order
+                                    </button>
+                                }
+                            </div>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+
+        </table>
+    }
+    else
+    {
+        <p>No Data to display!</p>
+    }
+    @await Html.PartialAsync("_OrdersModal", await _ordersService.GetCitiesWithOrderViewModel())
 </div>
 <div class="modal fade" id="confirmationModalPopup" tabindex="-1" aria-labelledby="confirmationModalLabel" aria-hidden="true">
-	<div class="modal-dialog modal-dialog-centered">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="confirmationModalLabel">Confirm Action</h5>
-				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-			</div>
-			<div class="modal-body">
-				Are you sure you want to delete this order?
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-				<button type="button" class="btn btn-danger" id="confirmDelete">Delete</button>
-			</div>
-		</div>
-	</div>
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmationModalLabel">Confirm Action</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this order?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" id="confirmDelete">Delete</button>
+            </div>
+        </div>
+    </div>
 </div>
 @section Scripts {
-	@{
-		<partial name="_ValidationScriptsPartial" />
-	}
-	<script>
-		$(document).ready(function () {
-			$('.delete-btn').click(function () {
-				var orderId = $(this).data('id');
-				$('#confirmationModalPopup').modal('show');
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+    <script>
+        $(document).ready(function () {
+            $('.delete-btn').click(function () {
+                var orderId = $(this).data('id');
+                $('#confirmationModalPopup').modal('show');
 
-				$('#confirmDelete').click(function () {
-					$.ajax({
-						url: '@Url.Action("Delete", "Orders")',
-						type: 'POST',
-						data: { id: orderId },
-						success: function () {
-							location.reload();
-						},
-						error: function () {
-						}
-					});
-				});
-			});
-		});
-	</script>
+                $('#confirmDelete').click(function () {
+                    $.ajax({
+                        url: '@Url.Action("Delete", "Orders")',
+                        type: 'POST',
+                        data: { id: orderId },
+                        success: function () {
+                            location.reload();
+                        },
+                        error: function () {
+                        }
+                    });
+                });
+            });
+        });
+    </script>
 }
