--- a/DeliveryCompany/DeliveryCompany/Views/Shared/_Layout.cshtml
+++ b/DeliveryCompany/DeliveryCompany/Views/Shared/_Layout.cshtml
@@ -25,12 +25,13 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Orders" asp-action="Index">Orders</a>
-                        </li>
+                        @if (User.IsInRole(UserRoles.Admin) || User.IsInRole(UserRoles.User))
+
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Orders" asp-action="Index">Orders</a>
+                            </li>
+                        }
                         @if (User.IsInRole(UserRoles.Admin))
                         {
                             <li class="nav-item">
@@ -45,7 +46,8 @@
                                 <a class="nav-link" asp-area="" asp-controller="DeliveryCars" asp-action="Index">Delivery Cars</a>
                             </li>
                         }
-                        </ul>
+
+                    </ul>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
