- added view, view model, repository and service for the deliveries logic - added new method to in the employee service to retrieve an employee by the userId - added new method in the delivery car service to retrieve a car by the employeeId - added new logic when creating a order to create a delivery as well if it is not yet created and balance it based on how many deliveries are per car - added new logic when cancelling a order to cancel the delivery as well

--- a/DeliveryCompany/DeliveryCompany/Views/Shared/_Layout.cshtml
+++ b/DeliveryCompany/DeliveryCompany/Views/Shared/_Layout.cshtml
@@ -32,11 +32,16 @@
                                 <a class="nav-link" asp-area="" asp-controller="Orders" asp-action="Index">Orders</a>
                             </li>
                         }
-                        @if (User.IsInRole(UserRoles.Admin))
+
+                        @if (User.IsInRole(UserRoles.Admin) || User.IsInRole(UserRoles.DeliveryEmployee))
                         {
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="Deliveries" asp-action="Index">Deliveries</a>
                             </li>
+                        }
+
+                        @if (User.IsInRole(UserRoles.Admin))
+                        {
 
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="UserManagement" asp-action="Index">User Management</a>
