Created View and viewModel and controller for contact page Added button on the navbar only for the user Added a method in the orderService because Sbaroi asked me Fixed some authorization issues on some certain controllers

--- a/DeliveryCompany/DeliveryCompany/Views/DeliveryCars/Edit.cshtml
+++ b/DeliveryCompany/DeliveryCompany/Views/DeliveryCars/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@using DeliveryCompany.Models.ViewModels
 @model DeliveryCarCreationVM
 @{
-    ViewData["Title"] = "Delivery Cars Creation";
+    ViewData["Title"] = "Delivery Cars Edit";
 }
 
 <div class="row d-flex align-items-center justify-content-center">
