--- a/DeliveryCompany/DeliveryCompany/Views/Orders/Index.cshtml
+++ b/DeliveryCompany/DeliveryCompany/Views/Orders/Index.cshtml
@@ -64,7 +64,7 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var obj in Model.OrderBy(
+                @foreach (var obj in Model.OrderByDescending(
                category => category.DateTime))
                 {
                     <tr class="clickable">
