--- a/DeliveryCompany/DeliveryCompany/Views/DeliveryCars/Create.cshtml
+++ b/DeliveryCompany/DeliveryCompany/Views/DeliveryCars/Create.cshtml
@@ -38,7 +38,7 @@
             <div class="mb-1">
                 <label asp-for="EmployeeId" class="control-label"></label>
                 <select asp-for="EmployeeId" class="form-control" id="roleSelect">
-                    <option value="">Select Role</option>
+                    <option value="">Select Employee</option>
                     @foreach (var employee in Model.Employees)
                     {
                         if (employee is not null)
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="col-8">
                     <a asp-action="Index" class="text-info text-decoration-none float-start mt-2">
-                        <i class="bi bi-arrow-left"></i> Back to User Management
+                        <i class="bi bi-arrow-left"></i> Back to Delivery Car Page
                     </a>
                 </div>
                 <div class="col-4">
