Added new service to send message via a SMTP server Corrected some mistaked on the Contact page

--- a/DeliveryCompany/DeliveryCompany/Views/Contact/Index.cshtml
+++ b/DeliveryCompany/DeliveryCompany/Views/Contact/Index.cshtml
@@ -8,8 +8,8 @@
 
 <div class="row d-flex align-items-center justify-content-center">
     <div class="p-3">
-        <h2 class="text-center text-primary">Create User</h2>
-        <form asp-action="Create" method="post">
+        <h2 class="text-center text-primary">Contact page</h2>
+        <form asp-action="Index" method="post">
             <div asp-validation-summary="ModelOnly"></div>
             <div class="mb-1">
                 <label asp-for="Name" class="control-label"></label>
