--- a/DeliveryCompany/DeliveryCompany/Views/DeliveryCars/Edit.cshtml
+++ b/DeliveryCompany/DeliveryCompany/Views/DeliveryCars/Edit.cshtml
@@ -53,7 +53,7 @@
             <div class="row">
                 <div class="col-8">
                     <a asp-action="Index" class="text-info text-decoration-none float-start mt-2">
-                        <i class="bi bi-arrow-left"></i> Back to User Management
+                        <i class="bi bi-arrow-left"></i> Back to Delivery Cars
                     </a>
                 </div>
                 <div class="col-4">
